# eval-macro

./: Cargo.toml  README.md
examples/gen_struct/: Cargo.toml
examples/gen_struct/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs
macro/: Cargo.toml  build.rs
macro/src/: error.rs  lib.rs  path.rs
tests/nightly/: Cargo.toml
tests/nightly/src/: main.rs
tests/stable/: Cargo.toml
tests/stable-no-std/: Cargo.toml
tests/stable/src/: main.rs
