[package]
name = "crabtime"
version = "1.1.2"
authors = ["Wojciech Danilo <wojciech.danilo@gmail.com>"]
description = "A powerful yet easy-to-use Rust macro that generates code by evaluating inline Rust logic at compile time."
keywords = ["macro", "macro_rules", "procedural", "eval", "inline"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wdanilo/crabtime"
edition = { workspace = true }

[features]
default = ["std"]
std = []

[lib]

[dependencies]
crabtime-internal = { version = "1.1.2", path = "../macro" }

[lints]
workspace = true
