[package]
name = "crabtime-internal"
version = "1.0.0"
authors = ["Wojciech Danilo <wojciech.danilo@gmail.com>"]
edition = { workspace = true }
description = "Helper for the crabtime crate."
keywords = ["macros"]
license = "MIT OR Apache-2.0"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full"] }
toml = "0.8"

[build-dependencies]
rustc_version = "0.4"

[lib]
proc-macro = true

[lints]
workspace = true
